Rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: token-test-rollout
spec:
  replicas: null
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: token-test
  template:
    metadata:
      labels:
        app: token-test
    spec:
      containers:
        - name: app
          image: token-service:attempt2
          ports:
            - containerPort: 8443
          resources:
            requests:
              cpu: 20m
              memory: 40Mi
  strategy:
    canary:
      canaryService: token-test-preview-service
      stableService: token-test-active-service
      canaryMetadata:
        labels:
          state: canary
      stableMetadata:
        labels:
          state: stable
      maxUnavailable: 0
      trafficRouting:
        nginx:
          stableIngress: token-test-ingress
      steps:
        - setCanaryScale:
            replicas: 1
        - pause: {}
        - setWeight: 5
        - setCanaryScale:
            matchTrafficWeight: true
        - pause:
            duration: 30s
        - setWeight: 20
        - pause:
            duration: 30s
        - setWeight: 50
        - pause:
            duration: 30s
