prometheus.yaml
apiVersion: v1
kind: Service
metadata:
  name: token-test-rollout
  labels:
    app: token-test-rollout
spec:
  #type: NodePort
  ports:
  - name: management
    port: 8443
    targetPort: 8443
    protocol: TCP
    name: https
  selector:
    app: token-test-rollout
